--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 /*This file controls how certain things look on the screen outside your viewport. You shouldn't need to mess with it.*/
 
 #viewport {
-	height: 800px;
+	height: 400px;
+	width: 400px;
 	border: 2px solid black;
 	margin:2px;
 }
